tried to make a newly posted hompage slideshow, failed...

--- a/all-posts.html
+++ b/all-posts.html
@@ -20,8 +20,10 @@
 
 <body>
 
-    <script src="/JS/all-blog-posts.js" defer></script>
+    <script src="/JS/nav-links/all-blog-posts.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
+
+    <script src="/JS/header-searchbar.js" defer></script>
     
     <header>
 
