--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <body>
 
-    <script src="/JS/newly-posted.js" defer></script>
+    <script src="/JS//index/newly-posted.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
-    <script src="/JS/all-posts-index.js" defer></script>
-    <script src="/JS/header-searchbar.js" defer></script>
-    <script src="/JS/slides-index.js" defer></script>
+    <script src="/JS/index/all-posts-index.js" defer></script>
+    <script src="/JS/carousel-slides.js/slides-index.js" defer></script>
 
+    <script src="/JS/header-searchbar.js" defer></script>
 
     <header>
 
