--- a/edible.html
+++ b/edible.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <script src="/JS/edible.js" defer></script>
+    <script src="/JS/nav-links/edible.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
+
+    <script src="/JS/header-searchbar.js" defer></script>
 
     <header>
 
