--- a/indoor.html
+++ b/indoor.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <script src="/JS/indoor.js" defer></script>
+    <script src="/JS/nav-links/indoor.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
+
+    <script src="/JS/header-searchbar.js" defer></script>
 
     <header>
 
