--- a/outdoor.html
+++ b/outdoor.html
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    <script src="/JS/outdoor.js" defer></script>
+    <script src="/JS/nav-links/outdoor.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
+
+    <script src="/JS/header-searchbar.js" defer></script>
     
     <header>
 
