--- a/blog-post-detail.html
+++ b/blog-post-detail.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <script src="/JS/nav-links/blog-post-detail.js" defer></script>
+    <script src="/JS/blog-post-detail.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
 
     <script src="/JS/header-searchbar.js" defer></script>
