tweaked some things

--- a/all-posts.html
+++ b/all-posts.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="searchbar">
-                    <input type="text" id="searchInput" placeholder="Search post...">
+                    <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
 
                 <div class="all-blogs">
@@ -116,7 +116,7 @@
                             <div class="right-s-text">
                                 <h2>About Me</h2>
 
-                                <a href="/Admin/admin-login.html">
+                                <a href="admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
