--- a/admin-page.html
+++ b/admin-page.html
@@ -62,8 +62,8 @@
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
-                                <a href="/Admin/admin-create.html" class="admin-button" id="create-button">Create Post</a>
-                                <a href="/Admin/admin-login.html" class="admin-button" id="loggout-button">Logg Out</a>
+                                <a href="admin-create.html" class="admin-button" id="create-button">Create Post</a>
+                                <a href="admin-login.html" class="admin-button" id="loggout-button">Logg Out</a>
     
                                 <div class="right-s-info">
                                     <p><span>Total Posts:</span> <span id="totalPosts"></span></p>
