--- a/blog-post-detail.html
+++ b/blog-post-detail.html
@@ -96,7 +96,7 @@
                             <div class="right-s-text">
                                 <h2>Did You Enjoy<br>The Read?</h2>
 
-                                <a href="/Admin/admin-login.html">
+                                <a href="admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
