--- a/outdoor.html
+++ b/outdoor.html
@@ -91,7 +91,7 @@
                             <div class="right-s-text">
                                 <h2>About Me</h2>
 
-                                <a href="/Admin/admin-login.html">
+                                <a href="admin-login.html">
                                     <img src="/MEDIA/logo/crazyplantladyprofile-left.png" alt="">
                                 </a>
                                 
