made a responsive header, havent finished

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="/JS/carousel-slides.js/slides-index.js" defer></script>
 
     <script src="/JS/header-searchbar.js" defer></script>
+    <script src="/JS/header.js" defer></script>
 
     <header>
 
@@ -39,7 +40,9 @@
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
-            <ul>
+            <i class="fa-solid fa-bars menu-icon"></i>
+
+            <ul class="nav-links">
 
                 <div class="searchbar-header">
                     <div class="searchbar-header-content">
