tweaking the tweaks

--- a/admin-login.html
+++ b/admin-login.html
@@ -38,7 +38,7 @@
             <div class="welcome-background">
 
                 <div class="background-photo">
-                    <img src="/MEDIA/background/painted-leafy-background.jpg" alt="">
+                    <img src="/MEDIA/background/indoor.png" alt="A picture of various plants on the wooden floor on a dark-calm green.">
                  </div>
 
                 <div class="framed-logo">
