--- a/admin-page.html
+++ b/admin-page.html
@@ -40,6 +40,10 @@
 
                 <h1>All Posts</h1>
 
+                <div class="searchbar">
+                    <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+
                 <div class="all-blogs">
 
                 </div>
@@ -63,7 +67,7 @@
                                 </a>
                                 
                                 <a href="admin-create.html" class="admin-button" id="create-button">Create Post</a>
-                                <a href="admin-login.html" class="admin-button" id="loggout-button">Logg Out</a>
+                                <a href="admin-login.html" class="admin-button" id="loggout-button">Sign Out</a>
     
                                 <div class="right-s-info">
                                     <p><span>Total Posts:</span> <span id="totalPosts"></span></p>
