--- a/outdoor.html
+++ b/outdoor.html
@@ -18,7 +18,8 @@
     <script src="/JS/updated-post-info.js" defer></script>
 
     <script src="/JS/header-searchbar.js" defer></script>
-    
+    <script src="/JS/header.js" defer></script>
+
     <header>
 
         <nav>
@@ -27,11 +28,13 @@
                 <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
-            <ul>
+            <i class="fa-solid fa-bars menu-icon"></i>
+
+            <ul class="nav-links">
 
                 <div class="searchbar-header">
                     <div class="searchbar-header-content">
-                        <input type="text" id="searchInput" placeholder="Search Blog Post..."><i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" id="searchInput" placeholder="Dig Up Delightful Plant Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div id="searchResults" class="search-results"></div>
                 </div>
