--- a/animal.html
+++ b/animal.html
@@ -74,7 +74,7 @@
                 <h1><span>Animal Friendly Plants</span> Blogs</h1>
 
                 <div class="searchbar">
-                    <input type="text" id="searchInput" placeholder="Search post...">
+                    <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
 
                 <div class="all-blogs"></div>
