--- a/outdoor.html
+++ b/outdoor.html
@@ -73,7 +73,7 @@
                 <h1><span>Outdoor Plants</span> Blogs</h1>
 
                 <div class="searchbar">
-                    <input type="text" id="searchInput" placeholder="Search post...">
+                    <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 
                 <div class="all-blogs"></div>
