--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
             <ul class="nav-links">
 
-                <span class="searchbar-header">
+                <li class="searchbar-header">
                     <div class="searchbar-header-content">
                         <input type="text" id="searchInput" placeholder="Dig Up Delightful Plant Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                    <div id="searchResults" class="search-results"></div>
-                </span>
+                    <div id="searchResults" class="search-results"></div>  
+                </li>
                 
                 <li>
                     <a href="all-posts.html" class="head-link1">All Posts</a>
