making a slideshow/ carousel

--- a/index.html
+++ b/index.html
@@ -193,9 +193,27 @@
 
                     <h2><span>Freshly Picked</span> Posts</h2>
 
+                    <button class="next-left-newly"><i class="fa-solid fa-chevron-left"></i></button>
+                    <button class="next-right-newly"><i class="fa-solid fa-chevron-right"></i></button>
+
                     <div class="newly-posted-carousel">
+
                         <div class="newly-posted">
                         </div>
+
+                    </div>
+
+                    <div class="progress-bar-newly">
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
+                        <span class="dot-newly"></span>
                     </div>
 
                 </div>
