--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                 <li class="searchbar-header">
                     <div class="searchbar-header-content">
-                        <input type="text" id="searchInput" placeholder="Dig Up Delightful Plant Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" id="searchInput" placeholder="Dig Up Delightful Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div id="searchResults" class="search-results"></div>  
                 </li>
@@ -204,7 +204,6 @@
                     </div>
 
                     <div class="progress-bar-newly">
-                        <span class="dot-newly"></span>
                         <span class="dot-newly"></span>
                         <span class="dot-newly"></span>
                         <span class="dot-newly"></span>
