made a error page just for fun

--- a/admin-login.html
+++ b/admin-login.html
@@ -24,7 +24,7 @@
     <header>
         <nav>
             <a href="/index.html" class="logo">
-                <img src="/MEDIA/logo/greenlogo.png" alt="">
+                <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady Logo, written in dark green letters spelling 'Crazy Plant, and all capital letters: LADY'">
             </a>
         </nav>
     </header>
@@ -60,7 +60,7 @@
                             <button type="submit" class="login-button">Login</button>
 
                             <div class="gobackbutton">
-                                <a href="javascript:window.history.back();"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
+                                <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Go Back to Home</a>
                             </div>
 
                         </form>
