--- a/admin-page.html
+++ b/admin-page.html
@@ -21,6 +21,7 @@
 <body>
 
     <script src="/JS/Admin/admin-page.js" defer></script>
+    <script src="/JS/updated-post-info.js" defer></script>
     
     <header>
         <nav>
