--- a/blog-post-detail.html
+++ b/blog-post-detail.html
@@ -31,7 +31,7 @@
         <nav>
 
             <a href="index.html" class="logo">
-                <img src="/MEDIA/logo/greenlogo.png" alt="">
+                <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady Logo, written in dark green letters spelling 'Crazy Plant, and all capital letters: LADY'">
             </a>
 
             <i class="fa-solid fa-bars menu-icon"></i>
