--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav>
 
             <a href="index.html" class="logo">
-                <img src="/MEDIA/logo/greenlogo.png" alt="">
+                <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady Logo, written in dark green letters spelling 'Crazy Plant, and all capital letters: LADY'">
             </a>
 
             <i class="fa-solid fa-bars menu-icon"></i>
@@ -238,7 +238,6 @@
                                 </a>
                                 
                                 <p>Greetings fellow plant enthusiasts! I'm The Crazy Plant Lady, a soul who found her sanctuary amidst the bustling chaos of urban life through the tender embrace of plants.</p>
-                                <p>My journey began with a few humble succulents adorning my apartment windowsill, but it didn't take long for their leafy charms to capture my heart and ignite a passion within me.</p>
                                 <p>Join me on this journey of growth, resilience, and endless botanical wonders. Together, let's embrace the magic of plants and nurture our spirits as we cultivate a greener, more vibrant world. Whether you're a seasoned plant parent or a budding enthusiast, there's always room in my digital garden for you. So, grab your watering can and let's sow the seeds of joy and discovery together!</p>
     
                                 <div class="right-s-info" id="rightSInfo">
@@ -278,8 +277,8 @@
 
             <div class="footer-info">
                 <h2>INFO</h2>
-                <a href=""><h3>About Me</h3></a>
-                <a href=""><h3>Contact Me</h3></a>
+                <a href="error.html"><h3>About Me</h3></a>
+                <a href="error.html"><h3>Contact Me</h3></a>
             </div>
 
         </div>
