making a loading thingie

--- a/all-posts.html
+++ b/all-posts.html
@@ -97,8 +97,9 @@
                 <div class="searchbar">
                     <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-
+                
                 <div class="all-blogs">
+                    <div class="loader"></div> 
 
                 </div>
 
