--- a/outdoor.html
+++ b/outdoor.html
@@ -70,7 +70,7 @@
         <section class="main-content">
 
             <div class="scroll-content">
-                <h1><span>Outdoor Plants</span> Blogs</h1>
+                <h1><span>Outdoor Plants</span> Posts</h1>
 
                 <div class="searchbar">
                     <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
