--- a/edible.html
+++ b/edible.html
@@ -71,7 +71,7 @@
             
             <div class="scroll-content">
 
-                <h1><span>Edible Plants</span> Blogs</h1>
+                <h1><span>Edible Plants</span> Posts</h1>
 
                 <div class="searchbar">
                     <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
