--- a/edible.html
+++ b/edible.html
@@ -77,6 +77,8 @@
                     <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
 
+                <div class="loader"></div> 
+
                 <div class="all-blogs"></div>
             </div>
             
