--- a/outdoor.html
+++ b/outdoor.html
@@ -76,6 +76,8 @@
                     <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 
+                <div class="loader"></div> 
+
                 <div class="all-blogs"></div>
             </div>
 
