just fixing some stuff for now

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <script src="/JS/header-searchbar.js" defer></script>
     <script src="/JS/header.js" defer></script>
-    <script src="/JS/index/un-scroll.js"></script>
+    <script src="/JS/un-scroll.js"></script>
 
     <header>
 
