--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
     <head>
 
-        <title>Crazy Plant Lady Blog</title>
-
+        <title>Crazy Plant Lady Blog</title>¨
+        <link href="/favicon.ico" rel="icon" type="image/x-icon">        
+        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Weronika Vik">
