trying to put the responsive about me to every page

--- a/admin-page.html
+++ b/admin-page.html
@@ -22,7 +22,8 @@
 
     <script src="/JS/Admin/admin-page.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>
-    
+    <script src="/JS/un-scroll.js"></script>
+  
     <header>
         <nav>
 
