--- a/animal.html
+++ b/animal.html
@@ -19,6 +19,7 @@
 
     <script src="/JS/header-searchbar.js" defer></script>
     <script src="/JS/header.js" defer></script>
+    <script src="/JS/un-scroll.js"></script>
 
     <header>
 
@@ -117,6 +118,8 @@
                 </div>
 
             </div>
+
+            <i class="fa-solid fa-chevron-left toggle-icon" id="toggleIcon"></i>
             
         </section>
     </main>
