--- a/admin-blog-post.html
+++ b/admin-blog-post.html
@@ -22,7 +22,8 @@
 
     <script src="/JS/Admin/admin-blog-post-detail.js" defer></script>
     <script src="/JS/updated-post-info.js" defer></script>  
-      
+    <script src="/JS/un-scroll.js"></script>
+
     <header>
         <nav>
             <a href="index.html" class="logo">
