--- a/blog-post-detail.html
+++ b/blog-post-detail.html
@@ -25,6 +25,7 @@
 
     <script src="/JS/header-searchbar.js" defer></script>
     <script src="/JS/header.js" defer></script>
+    <script src="/JS/un-scroll.js"></script>
 
     <header>
 
@@ -121,6 +122,9 @@
                 </div>
 
             </div>
+
+            <i class="fa-solid fa-chevron-left toggle-icon" id="toggleIcon"></i>
+
     
         </section>
 
