trying new things constantly

--- a/blog-post-detail.html
+++ b/blog-post-detail.html
@@ -79,6 +79,8 @@
 
             <div class="scroll-content">
 
+                <div class="loader"></div> 
+
                 <div class="blog-detail">
 
                 </div>
