making the admin page responsive

--- a/admin-page.html
+++ b/admin-page.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Weronika Vik">
-        <meta name="description" content="">
+        <meta name="description" content="Admin Page">
       
        <link rel="stylesheet" href="/CSS/footer.css">
        <link rel="stylesheet" href="/CSS/header.css">
@@ -85,6 +85,8 @@
                 </div>
 
             </div>
+
+            <i class="fa-solid fa-chevron-left toggle-icon" id="toggleIcon"></i>
     
         </section>
 
