still making it responsive baby

--- a/admin-blog-post.html
+++ b/admin-blog-post.html
@@ -39,6 +39,8 @@
 
             <div class="scroll-content">
 
+                <h1>Admin Edit - Blog Post</h1>
+
                 <div class="admin-blog-detail">
 
                 </div>
@@ -81,6 +83,8 @@
                 </div>
 
             </div>
+
+            <i class="fa-solid fa-chevron-left toggle-icon" id="toggleIcon"></i>
     
         </section>
 
