--- a/admin-login.html
+++ b/admin-login.html
@@ -33,7 +33,7 @@
 
         <section class="welcome-logo">
 
-            <h1>Login</h1>
+            <h1>Admin Login</h1>
 
             <div class="welcome-background">
 
