--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 
         <section class="welcome-logo" id="section-scroll">
 
+            <!-- 
+                For the carousel, I used w3schools.com for some help and inspiration, link: https://www.w3schools.com/howto/howto_js_slideshow.asp
+            -->
+
             <div class="welcome-background">
 
                 <button class="next-left"><i class="fa-solid fa-chevron-left"></i></button>
