fixing the validation errors

--- a/all-posts.html
+++ b/all-posts.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="searchbar">
-                    <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" id="searchInputHeader" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
 
                 <div class="loader"></div> 
