fixed the duplicate name error

--- a/all-posts.html
+++ b/all-posts.html
@@ -41,7 +41,7 @@
 
                 <li class="searchbar-header">
                     <div class="searchbar-header-content">
-                        <input type="text" id="searchInput" placeholder="Dig Up Delightful Plant Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" id="searchInputHeader" placeholder="Dig Up Delightful Plant Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div id="searchResults" class="search-results"></div>  
                 </li>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="searchbar">
-                    <input type="text" id="searchInputHeader" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" id="searchInput" placeholder="Search post..."><i class="fa-solid fa-magnifying-glass"></i>
                 </div>
 
                 <div class="loader"></div> 
