--- a/error.html
+++ b/error.html
@@ -37,7 +37,7 @@
         <nav>
 
             <a href="index.html" class="logo">
-                <img src="/MEDIA/logo/greenlogo.png" alt="Crazy Plant Lady Logo, written in dark green letters spelling 'Crazy Plant, and all capital letters: LADY'">
+                <img src="/MEDIA/logo/greenlogo.png" alt="">
             </a>
 
             <i class="fa-solid fa-bars menu-icon"></i>
@@ -46,7 +46,7 @@
 
                 <li class="searchbar-header">
                     <div class="searchbar-header-content">
-                        <input type="text" id="searchInput" placeholder="Dig Up Delightful Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" id="searchInputHeader" placeholder="Dig Up Delightful Plant Post Here..."><i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div id="searchResults" class="search-results"></div>  
                 </li>
