still fixing validation errors

--- a/admin-create.html
+++ b/admin-create.html
@@ -74,7 +74,7 @@
 
                                 <div class="blog-p-box">
                                     <label for="blogText" class="blog-p">Blog Text:</label>
-                                    <textarea id="blogText" name="blogText" maxLenght="2000" placeholder="Write your Blog Post Text Here..."></textarea>
+                                    <textarea id="blogText" name="blogText" placeholder="Write your Blog Post Text Here..."></textarea>
                                     <p id="blogTextCounter">2000 characters remaining</p>
                                 </div>
                             
