--- a/admin-create.html
+++ b/admin-create.html
@@ -49,6 +49,8 @@
                                     <a href="javascript:window.history.back();"><i class="fa-solid fa-arrow-left"></i> Go Back</a>
                                 </div>
 
+                                <h1>Create New Post</h1>
+
                                 <div class="main-title-box">
                                     <label for="mainTitle" class="main-title">Blog Title:</label>
                                     <input type="text" id="mainTitle" name="mainTitle" required placeholder="Title...">
