--- a/error.html
+++ b/error.html
@@ -8,7 +8,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Weronika Vik">
-        <meta name="description" content="">
+        <meta name="description" content="Error Page">
       
        <link rel="stylesheet" href="/CSS/footer.css">
        <link rel="stylesheet" href="/CSS/header.css">
