fixing some validation errors

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         </section>
 
-        <section class="main-content" id="section-scroll">
+        <section class="main-content" id="section-main-scroll">
 
             <div class="scroll-content">
 
